--- a/FEasyVisa_Full_Code_vFinal_ErikVagshenian.ipynb
+++ b/FEasyVisa_Full_Code_vFinal_ErikVagshenian.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMisIoiuGBzm8+iebk8/naT",
+      "authorship_tag": "ABX9TyMmTI8/Lm1AUolAD5uYVtyZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,13 +27,47 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 38,
+      "cell_type": "markdown",
+      "source": [
+        "### Executive Summary\n",
+        "\n",
+        "In order to improve the fairness and efficiency of the U.S. visa certification process, this analysis uses data from 25,480 historical visa applications to predict whether a visa will be certified or denied. Each record includes both employee and employer details, such as education level, job experience, prevailing wage, company size, and region of employment. The target variable, case_status, represents visa outcomes — Certified (1) or Denied (0) — making this a supervised binary classification problem.\n",
+        "\n",
+        "The objective is to support the Office of Foreign Labor Certification (OFLC) by identifying which applications are most likely to be approved or denied, enabling faster and more consistent decision-making.\n",
+        "The final Gradient Boosting model, optimized through class weighting, resampling, and threshold tuning, achieved 70.3% accuracy for certified cases and 69.7% accuracy for denied cases, with an overall accuracy of 70.1%, F1 score of 0.76, and ROC-AUC of 0.77.\n",
+        "\n",
+        "The F1 score of 0.76 is acceptable because it reflects a balanced tradeoff between precision (avoiding false approvals) and recall (catching true certifications), which is critical in this context where both incorrect approvals and incorrect denials carry significant operational and compliance risks.\n",
+        "\n",
+        "Outcome: A balanced machine learning model was developed that correctly identifies about 7 in 10 visa certifications and denials, offering a fair and data-driven decision-support system that improves processing efficiency while maintaining compliance integrity."
+      ],
       "metadata": {
-        "id": "U6DbdXumcqtg"
+        "id": "Q_DpPjuc_y9H"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "V1al901gCGFR"
       },
-      "outputs": [],
-      "source": []
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "x8QUrVtMCGcY"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "fwq7hZv7_yW1"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -4878,7 +4912,13 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "### 9.\tMetric and Visualization Utilities\n",
+        "\n",
+        "**Outcome**: Utility functions were created to calculate model performance metrics including accuracy, precision, recall, F1, ROC-AUC, and specificity, and to visualize confusion matrices for result interpretation.\n",
+        "\n",
+        "In order to streamline model evaluation, reusable functions were built to compute key classification metrics and plot confusion matrices. These tools standardize performance tracking across all models and ensure that both certified (approvals) and denied (rejections) outcomes are assessed fairly. The inclusion of specificity allows explicit measurement of how accurately the model identifies denied cases, which is central to the business goal of reducing approval errors."
+      ],
       "metadata": {
         "id": "QnA0RUuW0mr2"
       }
@@ -4924,6 +4964,19 @@
       },
       "execution_count": 48,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 10.\tBaseline Models on ORIGINAL TRAIN (No Resampling)\n",
+        "\n",
+        "**Outcome**: Gradient Boosting achieved the best baseline with approximately 82% F1, 86% recall for certified cases, and 49% denied specificity, establishing strong approval prediction but weaker denial detection.\n",
+        "\n",
+        "In order to establish baseline performance, multiple machine learning models were trained on the original, imbalanced data using class weights to account for certification dominance. Models included Logistic Regression, Decision Tree, Random Forest, Bagging, AdaBoost, Gradient Boosting, and XGBoost. Gradient Boosting and XGBoost outperformed others, achieving F1 scores near 0.82, high recall for certified applications, and moderate specificity for denials. This demonstrates strong capability in predicting approvals but the need for better recognition of denials."
+      ],
+      "metadata": {
+        "id": "864eOpte9Ihq"
+      }
     },
     {
       "cell_type": "code",
@@ -5352,6 +5405,19 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### 11.\tModel Building — OVERSAMPLED TRAIN (SMOTE)\n",
+        "\n",
+        "**Outcome**: Oversampling increased denied detection to around 61% specificity while maintaining certified recall above 80%, showing progress in balancing predictions.\n",
+        "\n",
+        "In order to address class imbalance, the Synthetic Minority Oversampling Technique (SMOTE) was applied to the training set, ensuring models received equal exposure to denied cases. The same suite of models was retrained using this balanced dataset. Oversampling improved denied specificity and stabilized F1 performance while slightly reducing overall accuracy. These results confirmed that balancing the dataset helps the model better recognize denials without sacrificing too much approval precision."
+      ],
+      "metadata": {
+        "id": "g8umvpdU9SlQ"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# ============================================================\n",
@@ -5742,6 +5808,19 @@
       },
       "execution_count": 50,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 12.\tModel Building — UNDERSAMPLED TRAIN\n",
+        "\n",
+        "**Outcome**: Undersampling improved denied recognition to approximately 66% specificity but reduced certified recall to around 75%, illustrating the tradeoff between the two outcomes.\n",
+        "\n",
+        "In order to further evaluate imbalance handling, the majority class (certified) was reduced to match the number of denied cases, creating a balanced but smaller training dataset. Models trained on this data showed stronger denial prediction but weaker performance for approvals. The reduced dataset also slightly decreased generalization performance, confirming that undersampling improves fairness but requires optimization to avoid overfitting to smaller data."
+      ],
+      "metadata": {
+        "id": "zJ-rR_2F9jB_"
+      }
     },
     {
       "cell_type": "code",
@@ -6135,6 +6214,19 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### 13.\tSelect Top Candidates Across All Methods\n",
+        "\n",
+        "**Outcome**: Gradient Boosting, Random Forest (weighted), and XGBoost were selected as top performers for tuning, based on the highest F1 and balanced recall-specificity profiles.\n",
+        "\n",
+        "In order to optimize computational effort and focus on the most promising approaches, model results from the original, oversampled, and undersampled sets were compared. The top three models were selected for hyperparameter tuning based on their F1 scores (balance of precision and recall) and their ability to detect both certified and denied outcomes effectively."
+      ],
+      "metadata": {
+        "id": "obnx7Ug89pZ4"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# ============================================================\n",
@@ -6187,6 +6279,19 @@
       },
       "execution_count": 52,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 14.\tHyperparameter Tuning (CV + Randomized Search)\n",
+        "\n",
+        "**Outcome**: Optimized Gradient Boosting achieved an F1 score of about 0.83 with balanced recall and specificity, confirming it as the final model.\n",
+        "\n",
+        "In order to maximize model performance, RandomizedSearchCV with stratified cross-validation was applied to fine-tune the leading models. Key parameters like learning rate, tree depth, and estimator count were adjusted. Gradient Boosting consistently outperformed others after tuning, achieving the best mix of recall, F1, and denial specificity. This step confirmed its suitability for operational deployment."
+      ],
+      "metadata": {
+        "id": "mg_hrBs296yl"
+      }
     },
     {
       "cell_type": "code",
@@ -6504,6 +6609,19 @@
       },
       "execution_count": 53,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 15.\tThreshold Optimization\n",
+        "\n",
+        "**Outcome**: Optimal threshold tuning achieved approximately 74% accuracy, 86% recall for certified applications, and 49% denied specificity under the default setting, later improved through calibration.\n",
+        "\n",
+        "In order to better balance the trade-off between identifying approvals and denials, probability thresholds were adjusted. This allowed the model to shift sensitivity toward detecting denials while retaining strong approval prediction. The chosen threshold offered a better operational balance, addressing business goals of fairness and reliability."
+      ],
+      "metadata": {
+        "id": "9tDe8ENp-B8Q"
+      }
     },
     {
       "cell_type": "code",
@@ -6936,6 +7054,19 @@
       },
       "execution_count": 54,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 16.\tValidation Threshold Sweep — Multi-Threshold Confusion Metrics\n",
+        "\n",
+        "**Outcome**: At the balanced threshold, certified and denied predictions were both correctly identified around 70% of the time, showing equal performance across classes.\n",
+        "\n",
+        "In order to understand performance trade-offs at different probability thresholds, a series of confusion matrices and metric calculations were generated across a range of cutoff values. This analysis highlighted how increasing the threshold improved denied specificity while reducing certified recall, and vice versa. The balanced threshold was identified as the point where both outcomes achieved similar accuracy, supporting fairer model decisions."
+      ],
+      "metadata": {
+        "id": "CaMZ1HZM-Ohx"
+      }
     },
     {
       "cell_type": "code",
@@ -7428,6 +7559,19 @@
       },
       "execution_count": 55,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 17.\tThreshold Sweep with Key Operating Points\n",
+        "\n",
+        "**Outcome**: On the test data, the balanced threshold maintained 70.3% certified and 69.7% denied correctness, confirming stable generalization.\n",
+        "\n",
+        "In order to validate real-world reliability, the same threshold comparisons were applied to the untouched test set. The model preserved balanced accuracy across both classes, demonstrating consistency under new data. This confirmed the tuned model’s robustness and its potential for real-world deployment in the visa decision process."
+      ],
+      "metadata": {
+        "id": "X5ItSnjM-XrT"
+      }
     },
     {
       "cell_type": "code",
@@ -8066,6 +8210,19 @@
       },
       "execution_count": 56,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 18.\tBusiness Alignment: Outcomes vs. Problem Statement\n",
+        "\n",
+        "**Outcome**: The final model accurately predicts about 70% of both certified and denied applications, identifies key drivers of approval, and supports faster, fairer visa reviews.\n",
+        "\n",
+        "In order to align findings with the original business problem, results were mapped to operational goals. The model achieves balanced predictive accuracy, identifying education, experience, prevailing wage, and employment region as major influences on certification outcomes. These insights allow EasyVisa to streamline the visa evaluation process, ensuring decisions are more consistent, data-driven, and efficient while reducing manual workload and potential bias."
+      ],
+      "metadata": {
+        "id": "idncf8R7-jwC"
+      }
     },
     {
       "cell_type": "code",
@@ -9135,6 +9292,42 @@
       },
       "execution_count": 57,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Comprehensive Summary\n",
+        "\n",
+        "In order to address the U.S. Office of Foreign Labor Certification’s challenge of processing an increasing volume of visa applications efficiently and fairly, this analysis applies machine learning to predict visa approval outcomes using detailed applicant and employer data. The dataset includes 25,480 visa applications, covering variables such as education, experience, prevailing wage, region of employment, and company characteristics. The target variable, case_status, is binary — Certified (1) or Denied (0) — defining this as a supervised classification problem.\n",
+        "\n",
+        "After thorough data cleaning and preparation, all categorical values were standardized, inconsistent entries corrected, and wages annualized to ensure comparability. Exploratory data analysis revealed strong relationships between education, experience, and wage with visa outcomes: applicants with higher education levels and prior job experience were more likely to be certified, while those with only high school education or requiring job training faced higher denial rates. Regionally, Northeast and West regions had higher average wages and slightly higher certification rates.\n",
+        "\n",
+        "To ensure unbiased model evaluation, the data was split into training (60%), validation (20%), and test (20%) sets. Multiple classification models were tested, including Logistic Regression, Decision Tree, Random Forest, Bagging, AdaBoost, Gradient Boosting, and XGBoost. Class imbalance between certified (67%) and denied (33%) cases was addressed through SMOTE oversampling, undersampling, and class weighting.\n",
+        "\n",
+        "Among all models, Gradient Boosting delivered the best results. Initial validation showed strong performance for certified predictions but weaker recognition of denied applications. Through hyperparameter tuning and threshold optimization, the model was refined to balance both classes effectively.\n",
+        "\n",
+        "At the chosen balanced operating threshold (0.68), the final model achieved:\n",
+        "\t•\tOverall accuracy: 70.1%\n",
+        "\t•\tCertified correctly predicted: 70.35%\n",
+        "\t•\tDenied correctly predicted: 69.70%\n",
+        "\t•\tF1 score (Certified): 0.76\n",
+        "\t•\tROC-AUC: 0.77\n",
+        "\n",
+        "The F1 score of 0.76 indicates a strong overall balance between precision (how many predicted approvals were correct) and recall (how many actual approvals were detected). In this context, that tradeoff is valuable because the model’s purpose is not simply to maximize accuracy, but to maintain fairness—avoiding excessive approvals of weak applications while still identifying qualified candidates accurately.\n",
+        "\n",
+        "Feature importance analysis identified the most influential predictors:\n",
+        "\t1.\tEducation level (High School, Bachelor’s, Master’s, Doctorate) — higher education correlates with certification.\n",
+        "\t2.\tJob experience — applicants with prior experience are more likely to be approved.\n",
+        "\t3.\tPrevailing wage — higher wages increase the likelihood of certification.\n",
+        "\t4.\tContinent and region of employment — applications from Europe, North America, and the West region tend to have stronger approval rates.\n",
+        "\n",
+        "From an operational standpoint, this balanced model allows OFLC to screen applications fairly, catching weak or noncompliant cases while maintaining high accuracy for strong candidates. The Even Recall/Specificity threshold (0.68) ensures that both certified and denied cases are identified at roughly 70% correctness, a result that aligns directly with business objectives of fairness, transparency, and regulatory compliance.\n",
+        "\n",
+        "Outcome: The final Gradient Boosting model provides a fair and data-backed solution that correctly identifies 70% of both visa certifications and denials, with an F1 score of 0.76 and ROC-AUC of 0.77. The F1 score is considered strong in this application, as it reflects the model’s ability to balance false approvals and false denials—supporting consistent, compliant, and efficient visa decision-making."
+      ],
+      "metadata": {
+        "id": "PO_J37h2BWQw"
+      }
     }
   ]
 }
